--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:text="@string/team_1"
-            style="@style/ScoreText"
+            style="@style/TeamText"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             />
 
@@ -66,7 +66,7 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:text="@string/team_2"
-            style="@style/ScoreText"
+            style="@style/TeamText"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
 
         <ImageButton
