--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,10 @@
     <style name="ScoreText">
         <item name= "android:textAppearance">@style/TextAppearance.AppCompat.Headline</item>
     </style>
+
+    <style name="TeamText">
+        <item name=
+            "android:textAppearance">@style/TextAppearance.AppCompat.Display1
+        </item>
+    </style>
 </resources>
